jdk 21: replacing get(0) with getFirst