@@ -25,7 +25,7 @@ public class CheckboxIT extends SpectrumTest<Void> {
         screenshot();
         landingPage.getCheckboxLink().click();
 
-        final WebElement firstCheckbox = checkboxPage.getCheckboxes().get(0);
+        final WebElement firstCheckbox = checkboxPage.getCheckboxes().getFirst();
         final WebElement secondCheckbox = checkboxPage.getCheckboxes().get(1);
 
         screenshot();
