@@ -57,16 +57,16 @@ class FreeMarkerWrapperTest {
         when(freeMarker.getNumberFormat()).thenReturn(numberFormat);
 
         MockedConstruction<Version> versionMockedConstruction = mockConstruction(Version.class, context -> {
-            assertEquals(version, context.arguments().get(0));
+            assertEquals(version, context.arguments().getFirst());
             return withSettings();
         });
         MockedConstruction<freemarker.template.Configuration> configurationMockedConstruction = mockConstruction(freemarker.template.Configuration.class, context -> {
-            assertEquals(versionMockedConstruction.constructed().get(0), context.arguments().get(0));
+            assertEquals(versionMockedConstruction.constructed().getFirst(), context.arguments().getFirst());
             return withSettings();
         });
 
         freeMarkerWrapper.sessionOpenedFrom(spectrumConfiguration);
-        assertEquals(freeMarkerWrapper.getConfiguration(), configurationMockedConstruction.constructed().get(0));
+        assertEquals(freeMarkerWrapper.getConfiguration(), configurationMockedConstruction.constructed().getFirst());
 
         versionMockedConstruction.close();
         configurationMockedConstruction.close();
@@ -79,12 +79,12 @@ class FreeMarkerWrapperTest {
         final Map<String, Object> vars = Map.of("one", "value");
 
         MockedConstruction<StringReader> stringReaderMockedConstruction = mockConstruction(StringReader.class, context -> {
-            assertEquals(source, context.arguments().get(0));
+            assertEquals(source, context.arguments().getFirst());
             return withSettings();
         });
         MockedConstruction<Template> templateMockedConstruction = mockConstruction(Template.class, context -> {
-            assertEquals("freemarker", context.arguments().get(0));
-            assertEquals(stringReaderMockedConstruction.constructed().get(0), context.arguments().get(1));
+            assertEquals("freemarker", context.arguments().getFirst());
+            assertEquals(stringReaderMockedConstruction.constructed().getFirst(), context.arguments().get(1));
             assertEquals(configuration, context.arguments().get(2));
             return withSettings();
         });
@@ -92,8 +92,8 @@ class FreeMarkerWrapperTest {
 
         final String actual = freeMarkerWrapper.interpolate(source, vars);
 
-        final Template template = templateMockedConstruction.constructed().get(0);
-        final Writer writer = stringWriterMockedConstruction.constructed().get(0);
+        final Template template = templateMockedConstruction.constructed().getFirst();
+        final Writer writer = stringWriterMockedConstruction.constructed().getFirst();
         verify(template).process(vars, writer);
         assertEquals(writer.toString(), actual);
 
